Fixes #33 - Spacing on Right for About Page

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -264,7 +264,7 @@
     }
 
     img {
-        margin: 1em 0 0 5em;
+        padding: 1em 0 0 5em;
     }
 
     article:first-of-type {
